--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,10 @@
       {
           "src": "(.*)",
           "dest": "app.py"
+      },
+      {
+        "src": "/static/(.*)",
+        "dest": "/static/$1"
       }
   ]
 }
