--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,20 @@
 {
   "version": 2,
+  "trailingSlash": true,
   "builds": [
-      {
-          "src": "app.py",
-          "use": "@vercel/python"
-      },
-      {
-        "src": "/static/(.*)",
-        "dest": "@vercel/static"
-      }
+    {
+      "src": "app.py",
+      "use": "@vercel/python"
+    }
   ],
   "routes": [
-      {
-          "src": "(.*)",
-          "dest": "app.py"
-      }
-  ],
-  "trailingSlash": true
+    {
+      "src": "/static/(.*)",
+      "dest": "/static/$1"
+    },
+    {
+        "src": "(.*)",
+        "dest": "app.py"
+    }
+  ]
 }
