Refactor project so the models are defined in a separate file

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ __pycache__/
 *.pyc
 
 ## Ignore configuration files
-credentials.txt
+myApp/credentials.txt
 
 ## Ignore IntelliJ specific files
 .idea
