--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,5 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "wsgi.py",
-      "use": "@vercel/python"
-    }
-  ],
-  "routes": [
-    {
-      "src": "(.*)",
-      "dest": "myApp/routes.py"
-    }
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/routes/index" }
   ]
 }
