update vercel.json back to what it was originally.

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,15 @@
 {
-  "rewrites": [
-    { "source": "(.*)", "destination": "wsgi.py" }
+  "version": 2,
+  "builds": [
+    {
+      "src": "wsgi.py",
+      "use": "@vercel/python"
+    }
+  ],
+  "routes": [
+    {
+      "src": "(.*)",
+      "dest": "wsgi.py"
+    }
   ]
 }
